--- a/Gen_net_alignment/Gen_net_alignment.vcxproj.filters
+++ b/Gen_net_alignment/Gen_net_alignment.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Gen_net_alignment.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="seq_alignment.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -34,6 +31,15 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="exhaustive_search.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="stretching.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="score_alignment.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="lenear_alignment.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
