--- a/Gen_net_alignment/Gen_net_alignment.vcxproj.filters
+++ b/Gen_net_alignment/Gen_net_alignment.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="lenear_alignment.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="random_net_generator.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
