--- a/Gen_net_alignment/Gen_net_alignment.vcxproj.filters
+++ b/Gen_net_alignment/Gen_net_alignment.vcxproj.filters
@@ -45,6 +45,15 @@
     <ClInclude Include="random_net_generator.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="inefficient_algorithms_linear.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="clipping_linear.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="tree_alignment.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
